hphp/test/zend/good/ext/standard/tests/array/sizeof_object1.php.skipif
<?php

// Skip the test case if Standard PHP Library(spl) is not installed
<<__EntryPoint>> function main() { if( !extension_loaded('spl')) {
  die('skip spl is not installed');
}
}
