hphp/test/zend/bad/ext/spl/tests/countable_class_basic1.php.skipif
<?php 
// Skip the test case if Standard PHP Library(spl) is not installed
  if( !extension_loaded('spl'))
  {
     die('skip spl is not installed');
  }
?>